--- a/src/main/resources/templates/customer-management.html
+++ b/src/main/resources/templates/customer-management.html
@@ -74,7 +74,7 @@
                 </div>
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/">
+                        <a class="nav-link" href="/">
                             <i class="fas fa-tachometer-alt me-2"></i> Dashboard
                         </a>
                     </li>
@@ -84,7 +84,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/customers">
+                        <a class="nav-link active" href="/customers">
                             <i class="fas fa-users me-2"></i> Customer Management
                         </a>
                     </li>
