--- a/src/main/resources/templates/lab-reports.html
+++ b/src/main/resources/templates/lab-reports.html
@@ -74,7 +74,7 @@
                 </div>
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/">
+                        <a class="nav-link" href="/">
                             <i class="fas fa-tachometer-alt me-2"></i> Dashboard
                         </a>
                     </li>
@@ -89,7 +89,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/reports">
+                        <a class="nav-link active" href="/reports">
                             <i class="fas fa-chart-bar me-2"></i>Lab Reports
                         </a>
                     </li>
