--- a/src/main/resources/templates/medicine-management.html
+++ b/src/main/resources/templates/medicine-management.html
@@ -74,12 +74,12 @@
                 </div>
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/">
+                        <a class="nav-link" href="/">
                             <i class="fas fa-tachometer-alt me-2"></i> Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/medicines">
+                        <a class="nav-link active" href="/medicines">
                             <i class="fas fa-pills me-2"></i> Medicine Management
                         </a>
                     </li>
